--- a/line_config.json
+++ b/line_config.json
@@ -1,6 +1,6 @@
 [
     {
-        "url": "https://ghp.ci/https://raw.githubusercontent.com/SSM0415/apptest/main/TVbox2.txt",
+        "url": "https://raw.githubusercontent.com/SSM0415/apptest/main/TVbox2.txt",
         "title": "自用線路1-TV",
         "time": "2023-12-12"
     },
